minor fixes on mobile layout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -142,10 +142,9 @@ body {
   }
 }
 
-.title {
-  margin: auto;
-  padding: 4px;
-  width: fit-content;
-  background-color: ghostwhite;
-  border-radius: 10px;
-}
+//.title {
+//  margin: auto;
+//  width: fit-content;
+//  background-color: ghostwhite;
+//  border-radius: 10px;
+//}
